CHANGE - small changes on the system and main related to the data. version stable to test 9.